--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -190,6 +190,56 @@
     "cSpell.dictionaries": [
         "cpp"
     ],
+    "cSpell.words": [
+        "afxres",
+        "BYPOSITION",
+        "codecov",
+        "countof",
+        "dwms",
+        "DXTRACE",
+        "FILEW",
+        "gcovr",
+        "gtest",
+        "HHOOK",
+        "HMENU",
+        "Hosen",
+        "HRESULT",
+        "HSHELL",
+        "HWINEVENTHOOK",
+        "HWND",
+        "IWYU",
+        "keybd",
+        "KEYEVENTF",
+        "kwargs",
+        "LBUTTON",
+        "LBUTTONUP",
+        "lcov",
+        "LPARAM",
+        "LPCREATESTRUCT",
+        "lpfn",
+        "LPSTR",
+        "lpsz",
+        "LPWSTR",
+        "LRESULT",
+        "lstrcpy",
+        "LUID",
+        "MAKELPARAM",
+        "MENUEX",
+        "MYMENU",
+        "NOTIFYICONDATAA",
+        "Onimuru",
+        "OUTOFCONTEXT",
+        "pargs",
+        "poopypants",
+        "RBUTTON",
+        "RBUTTONDOWN",
+        "RBUTTONUP",
+        "ridk",
+        "Scheißdreck",
+        "tsystem",
+        "vcpkg",
+        "wndpl"
+    ],
     //=  Doxygen Documentation Generator  =========================================//
     "doxdocgen.cpp.tparamTemplate": "@tparam {param} ",
     "doxdocgen.file.fileTemplate": "@file {name}",
@@ -303,7 +353,7 @@
             }
         ]
     },
-    //==========  SVG Previewer  ==================================================//
+    //==========  Svg Previewer  ==================================================//
     "svg.preview.autoOpen": true,
     //=======  Workspace Formatter  ===============================================//
     "Workspace_Formatter.closeAfterSave": true,
@@ -320,58 +370,5 @@
         "*.cc",
         "*.c(pp)?"
     ],
-    "cSpell.words": [
-        "afxres",
-        "BYPOSITION",
-        "codecov",
-        "countof",
-        "dwms",
-        "DXTRACE",
-        "FILEW",
-        "gcovr",
-        "gtest",
-        "HHOOK",
-        "HMENU",
-        "Hosen",
-        "HRESULT",
-        "HSHELL",
-        "HWINEVENTHOOK",
-        "HWND",
-        "IWYU",
-        "keybd",
-        "KEYEVENTF",
-        "kwargs",
-        "LBUTTON",
-        "LBUTTONUP",
-        "lcov",
-        "LPARAM",
-        "LPCREATESTRUCT",
-        "lpfn",
-        "LPSTR",
-        "lpsz",
-        "LPWSTR",
-        "LRESULT",
-        "lstrcpy",
-        "LUID",
-        "MENUEX",
-        "MYMENU",
-        "NOTIFYICONDATAA",
-        "Onimuru",
-        "OUTOFCONTEXT",
-        "pargs",
-        "poopypants",
-        "RBUTTON",
-        "RBUTTONDOWN",
-        "RBUTTONUP",
-        "ridk",
-        "Scheißdreck",
-        "tsystem",
-        "vcpkg",
-        "wndpl"
-    ],
-    "coverage-gutters.coverageReportFileName": "C:/Users/Onimuru/Code/C++/WinCraft/build/index.html",
-    "coverage-gutters.manualCoverageFilePaths": [
-        "C:/Users/Onimuru/Code/C++/WinCraft/build/index.html",
-        "C:/Users/Onimuru/Code/C++/WinCraft/build/coverage.xml"
-    ],
+    //==============  Other  ======================================================//
 }
