--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,10 +4,18 @@ cmake_minimum_required(VERSION 3.21...3.27 FATAL_ERROR)
 
 project(${CMAKE_PROJECT_NAME}Tests LANGUAGES CXX C)
 
+#==========  CMake Variables  ==================================================#
+
+if(CMAKE_GENERATOR MATCHES "Ninja Multi")
+    set(CURRENT_BINARY_DIR "${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
+elseif(CMAKE_GENERATOR MATCHES "Ninja")
+    set(CURRENT_BINARY_DIR "${PROJECT_BINARY_DIR}")
+endif()
+
 #==========  Configure Files  ==================================================#
 
 # Move the ini file so that it is relative to the executable
-file(COPY "../cfg/Settings.ini" DESTINATION "${CMAKE_BINARY_DIR}/test")
+file(COPY "../cfg/Settings.ini" DESTINATION "${CURRENT_BINARY_DIR}")
 
 #========== Add Unit Test(s) ==================================================#
 
@@ -60,19 +68,15 @@ endforeach()
 add_custom_target(unit_tests DEPENDS ${TEST_NAMES})
 
 if(ENABLE_CODE_COVERAGE)
-    if(CMAKE_GENERATOR MATCHES "Ninja Multi")
-        set(CURRENT_BINARY_DIR "${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
-    elseif(CMAKE_GENERATOR MATCHES "Ninja")
-        set(CURRENT_BINARY_DIR "${PROJECT_BINARY_DIR}")
-    endif()
-
     foreach(TEST_NAME ${TEST_NAMES})
         add_custom_command(
             TARGET unit_tests
             POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E env LLVM_PROFILE_FILE=${TEST_NAME}.profraw $<TARGET_FILE:${TEST_NAME}> > NUL 2>&1
+            COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/Coverage"
             COMMAND llvm-profdata merge -sparse "${TEST_NAME}.profraw" -o "${TEST_NAME}.profdata"
-            COMMAND llvm-cov show $<TARGET_FILE:${TEST_NAME}> -instr-profile="${TEST_NAME}.profdata" > "${CMAKE_BINARY_DIR}/coverage_${TEST_NAME}.txt" -j ${PROCESSOR_COUNT}
+            COMMAND llvm-cov show $<TARGET_FILE:${TEST_NAME}> -instr-profile="${TEST_NAME}.profdata" > "${CMAKE_BINARY_DIR}/Coverage/coverage_${TEST_NAME}.txt" -j ${PROCESSOR_COUNT}
+            COMMAND llvm-cov report $<TARGET_FILE:${TEST_NAME}> -instr-profile="${TEST_NAME}.profdata" > "${CMAKE_BINARY_DIR}/Coverage/${TEST_NAME}.report" -j ${PROCESSOR_COUNT}
             WORKING_DIRECTORY "${CURRENT_BINARY_DIR}"
             COMMENT "Generating code coverage report for ${TEST_NAME}.exe"
         )
