Updated project (https://github.com/Onimuru/__Template/commit/c09188ab879951c41f68deb63277d9f27a6586ad)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21...3.27 FATAL_ERROR) #? 3.21 - PROJECT_IS_TOP_LEVEL
+cmake_minimum_required(VERSION 3.27...3.27 FATAL_ERROR) #? 3.27 - SKIP_LINTING
 
 #==========  Project Details  ==================================================#
 
@@ -18,7 +18,6 @@ variable_watch(CMAKE_BUILD_TYPE readonly_guard)
 
 message(STATUS "\n-- Configuring CMake for ${PROJECT_NAME} v${PROJECT_VERSION}...\n--")
 
-# Only do these if this is the main project, and not if it is included through add_subdirectory:
 if(PROJECT_IS_TOP_LEVEL)
     if(NOT DEFINED CMAKE_CXX_STANDARD)
         set(CMAKE_CXX_STANDARD
@@ -27,25 +26,27 @@ if(PROJECT_IS_TOP_LEVEL)
         )
     endif()
 
-    # Require C++17 features like if constexpr:
     set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
     set(CMAKE_CXX_EXTENSIONS OFF)
     set(CMAKE_C_EXTENSIONS OFF)
 endif()
 
-# Suppress generation of the ZERO_CHECK build target:
-set(CMAKE_SUPPRESS_REGENERATION true)
+set(CMAKE_SUPPRESS_REGENERATION ON)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_COLOR_DIAGNOSTICS ON)
 
-# Find number of processors
 include(ProcessorCount)
 ProcessorCount(PROCESSOR_COUNT)
 
 if(PROCESSOR_COUNT EQUAL 0)
     set(PROCESSOR_COUNT 1)
 endif()
+
+string(TOLOWER "${PROJECT_NAME}" PROJECT_NAME_TOLOWER)
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_TOUPPER)
 
 set(GIT_SHA
     "Unknown"
@@ -55,9 +56,7 @@ string(SUBSTRING "${GIT_SHA}" 0 8 GIT_SHORT_SHA)
 
 #=======  Manual File Additions  ===============================================#
 
-set(CPP_SUPPRESS_LIST)
-
-set(CLANG_TIDY_SUPPRESS_LIST)
+set(SKIP_LINTING_LIST)
 
 set(PRECOMPILED_HEADER_LIST "${CMAKE_CURRENT_SOURCE_DIR}/include/pch.h")
 
@@ -121,58 +120,61 @@ option(VCPKG_APPLOCAL_DEPS "Automatically copy dependencies into the output dire
 
 include(${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake)
 
+#=========  Compiler/OS Fixes  =================================================#
+
+if(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
+    if(WIN32)
+        add_compile_options($<$<COMPILE_LANGUAGE:C>:-fcolor-diagnostics> $<$<COMPILE_LANGUAGE:CXX>:-fcolor-diagnostics>)
+    else()
+        add_compile_options(-fcolor-diagnostics)
+    endif()
+
+    set(WINDOWS_HEADERS_NEEDED_BY_CLANG_LIST "$ENV{EXTERNAL_INCLUDE}")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(WIN32)
+        add_compile_options($<$<COMPILE_LANGUAGE:C>:-fdiagnostics-color=always> $<$<COMPILE_LANGUAGE:CXX>:-fdiagnostics-color=always>)
+    else()
+        add_compile_options(-fdiagnostics-color=always)
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    if(MSVC_VERSION GREATER 1900)
+        add_compile_options(/diagnostics:column)
+    endif()
+
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+else()
+    message(STATUS "No colored compiler diagnostic set for '${CMAKE_CXX_COMPILER_ID}' compiler.")
+endif()
+
 #==========  Configure Files  ==================================================#
 
-add_subdirectory(configure)
+configure_file("configure/config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/configured_files/include/config.h" ESCAPE_QUOTES)
 
 # Move the ini file so that it is relative to the executable
-file(COPY "cfg/Settings.ini" DESTINATION "${CMAKE_BINARY_DIR}/bin")
+file(COPY "cfg/Settings.ini" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 #========== Add Source Files ==================================================#
 
 add_subdirectory(external EXCLUDE_FROM_ALL)
 
-set(WINDOWS_HEADERS_NEEDED_BY_CLANG_LIST)
-
-if("${CMAKE_CXX_COMPILER_ID}" MATCHES "[Cc]lang")
-    set(WINDOWS_HEADERS_NEEDED_BY_CLANG_LIST "$ENV{EXTERNAL_INCLUDE}")
-endif()
-
 file(GLOB_RECURSE HEADER_LIST include/*)
-list(REMOVE_ITEM HEADER_LIST ${PRECOMPILED_HEADER_LIST})
 list(APPEND HEADER_LIST ${MANUAL_HEADER_LIST})
 list(REMOVE_DUPLICATES HEADER_LIST)
-
-if(ENABLE_CLANG_TIDY)
-    list(REMOVE_ITEM HEADER_LIST ${CLANG_TIDY_SUPPRESS_LIST})
-endif()
+list(REMOVE_ITEM HEADER_LIST ${PRECOMPILED_HEADER_LIST})
 
 file(GLOB_RECURSE SOURCE_LIST src/*.cpp)
-list(REMOVE_ITEM SOURCE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp")
 list(APPEND SOURCE_LIST ${MANUAL_SOURCE_LIST})
 list(REMOVE_DUPLICATES SOURCE_LIST)
+list(REMOVE_ITEM SOURCE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp")
 
-if(ENABLE_CLANG_TIDY)
-    list(REMOVE_ITEM SOURCE_LIST ${CLANG_TIDY_SUPPRESS_LIST})
-endif()
+foreach(SOURCE_FILE IN LISTS SKIP_LINTING_LIST)
+    set_source_files_properties(${SOURCE_FILE} PROPERTIES SKIP_LINTING ON)
+endforeach()
 
 #===========  Create Target  ===================================================#
 
-# Delete all cmake files from previous builds
-add_custom_target(clean_build_folder COMMAND git clean -d -f -x)
-
-if(ENABLE_CLANG_TIDY AND CLANG_TIDY_SUPPRESS_LIST)
-    add_library(CLANG_TIDY_SUPPRESS_LIBRARY OBJECT "${CLANG_TIDY_SUPPRESS_LIST}")
-    set_target_properties(CLANG_TIDY_SUPPRESS_LIBRARY PROPERTIES CXX_CLANG_TIDY "")
-    target_include_directories(CLANG_TIDY_SUPPRESS_LIBRARY PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>")
-endif()
-
 # Main executable
 add_executable(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp" "${SOURCE_LIST}" "${HEADER_LIST}")
-
-if(TARGET CLANG_TIDY_SUPPRESS_LIBRARY)
-    target_sources(${PROJECT_NAME} PRIVATE "$<TARGET_OBJECTS:CLANG_TIDY_SUPPRESS_LIBRARY>")
-endif()
 
 if(VERBOSE_OUTPUT)
     message(STATUS "Created ${PROJECT_NAME} binary with the following sources:")
@@ -187,6 +189,11 @@ endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${WINDOWS_HEADERS_NEEDED_BY_CLANG_LIST}" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")
 
+# Precompile headers
+if(NOT ENABLE_CLANG_TIDY OR CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
+    target_precompile_headers(${PROJECT_NAME} PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${PRECOMPILED_HEADER_LIST}>")
+endif()
+
 #=====  Set Standard and Warnings  =============================================#
 
 set_target_properties(
@@ -194,9 +201,9 @@ set_target_properties(
     PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD}
                CXX_STANDARD_REQUIRED 17
                CXX_EXTENSIONS NO
-               RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-               LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
-               ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+               RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin"
+               LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib"
+               ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib"
 )
 
 message(STATUS "* using standard C++${CMAKE_CXX_STANDARD}")
@@ -207,22 +214,13 @@ endif()
 
 #========  Compile Definitions  ================================================#
 
-if(${CMAKE_CXX_COMPILER} MATCHES "cl.exe")
-    target_compile_options(${PROJECT_NAME} PRIVATE /EHsc)
-endif()
-
-string(TOUPPER "${PROJECT_NAME}_DEBUG" PROJECT_DEBUG_DEFINE)
-target_compile_definitions(${PROJECT_NAME} PRIVATE ${PROJECT_DEBUG_DEFINE})
+# Target
+target_compile_definitions(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:-D${PROJECT_NAME_TOUPPER}_DEBUG>")
 
 # Global
 add_compile_definitions(_AFXDLL)
 
 #=========  Link Dependencies  =================================================#
-
-# Precompile headers
-if(NOT ENABLE_CLANG_TIDY OR CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
-    target_precompile_headers(${PROJECT_NAME} PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${PRECOMPILED_HEADER_LIST}>")
-endif()
 
 find_package(Microsoft.GSL CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE Microsoft.GSL::GSL)
@@ -233,6 +231,15 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${SIMPLEINI_INCLUDE_DIRS})
 #===========  Alias Targets  ===================================================#
 
 add_executable(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+
+#==============  Install  ======================================================#
+
+include(GNUInstallDirs)
+
+# Determine the installation directory for headers and libraries (the CMAKE_INSTALL_* variables are defined by the GNUInstallDirs module):
+set(INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-${PROJECT_VERSION}")
+set(INSTALL_BIN_DIR "${CMAKE_INSTALL_BINDIR}")
+set(INSTALL_LIB_DIR "${CMAKE_INSTALL_LIBDIR}")
 
 #========= Unit Testing Setup =================================================#
 
@@ -247,13 +254,12 @@ if(PROJECT_IS_TOP_LEVEL)
             append_coverage_compiler_flags_to_target(TESTING_LIBRARY)
         endif()
 
-        if(TARGET CLANG_TIDY_SUPPRESS_LIBRARY)
-            target_sources(TESTING_LIBRARY INTERFACE "${SOURCE_LIST}" "${HEADER_LIST}" "$<TARGET_OBJECTS:CLANG_TIDY_SUPPRESS_LIBRARY>")
-        else()
-            target_sources(TESTING_LIBRARY INTERFACE "${SOURCE_LIST}" "${HEADER_LIST}")
-        endif()
-
+        target_sources(TESTING_LIBRARY INTERFACE "${SOURCE_LIST}" "${HEADER_LIST}")
         target_include_directories(TESTING_LIBRARY INTERFACE "${WINDOWS_HEADERS_NEEDED_BY_CLANG_LIST}" "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
+        if(NOT ENABLE_CLANG_TIDY OR CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
+            target_precompile_headers(TESTING_LIBRARY INTERFACE "$<$<COMPILE_LANGUAGE:CXX>:${PRECOMPILED_HEADER_LIST}>")
+        endif()
 
         set_target_properties(
             TESTING_LIBRARY
@@ -262,16 +268,7 @@ if(PROJECT_IS_TOP_LEVEL)
                        CXX_EXTENSIONS NO
         )
 
-        if(${CMAKE_CXX_COMPILER} MATCHES "cl.exe")
-            target_compile_options(TESTING_LIBRARY INTERFACE /EHsc)
-        endif()
-
-        string(TOUPPER "${PROJECT_NAME}_TEST" PROJECT_TEST_DEFINE)
-        target_compile_definitions(TESTING_LIBRARY INTERFACE ${PROJECT_TEST_DEFINE})
-
-        if(NOT ENABLE_CLANG_TIDY OR CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
-            target_precompile_headers(TESTING_LIBRARY INTERFACE "$<$<COMPILE_LANGUAGE:CXX>:${PRECOMPILED_HEADER_LIST}>")
-        endif()
+        target_compile_definitions(TESTING_LIBRARY INTERFACE "${PROJECT_NAME_TOUPPER}_TEST")
 
         find_package(GTest CONFIG REQUIRED)
         include(GoogleTest)
@@ -298,12 +295,3 @@ if(ENABLE_DOXYGEN)
     include(cmake/Doxygen.cmake)
     enable_doxygen()
 endif()
-
-#==============  Install  ======================================================#
-
-include(GNUInstallDirs)
-
-# Determine the installation directory for headers and libraries (the CMAKE_INSTALL_* variables are defined by the GNUInstallDirs module):
-set(INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-${PROJECT_VERSION}")
-set(INSTALL_BIN_DIR "${CMAKE_INSTALL_BINDIR}")
-set(INSTALL_LIB_DIR "${CMAKE_INSTALL_LIBDIR}")
